---------------------------------------------------------------------------------------------------
Version: 0.4.2
Date: 28/5/25
  Major Features:
    - Added dungeons.
  Bugfixes:
    - Fixed the factoriopedia simulation for hexaprisms and hexic underground belts.
    - Added localization for the crystalline fuel tech.
---------------------------------------------------------------------------------------------------
Version: 0.4.1
Date: 27/5/25
  Major Features:
    - Added [planet=aquilo].
    - Added endgame resource on [planet=nauvis].
  Features:
    - Added energized thruster fuel and oxidizer recipes.
    - Added crystalline fuel as a burnable fuel.
  Minor Features:
    - Item/fluid names now show in the custom tooltips seen in trades and initial resources UI.
    - A tooltip now shows for coin amounts if they are abbreviated with units like "k" or "M".
  Changes:
    - [planet=vulcanus], [planet=fulgora], and [planet=gleba] now have three trades per hex instead of two.
    - [planet=vulcanus], [planet=fulgora], and [planet=gleba] now have finite planet size.
    - Sentient spider and demolisher techs now also require [item=military-science-pack].
  Bugfixes:
    - Took [item=destroyer-capsule] out from trade generation on all planets except [planet=fulgora]. (IT IS BUFFED)
    - Fixed terrain generation bug that deformed hexes on all planets.
    - Fixed interplanetary value calculation.
    - Fixed resource bias calculation.
    - Fixed that large coin values in trades were showing as the wrong tier of coin.
    - Fixed that concrete would lay over plant tiles on [planet=gleba].
  Optimizations:
    - Hexes are generated farther in advance, making them load more smoothly when zoomed out and moving at fast speeds.
---------------------------------------------------------------------------------------------------
Version: 0.4.0
Date: 25/5/25
  Major Features:
    - Added [planet=gleba].
    - Added the Quantum Bazaar.