@@ -14,6 +14,7 @@ hexa-productivity-module=[color=128,16,0]Hexa Productivity Module[.color]
 hexa-efficiency-module=[color=128,16,0]Hexa Efficiency Module[.color]
 hexa-quality-module=[color=128,16,0]Hexa Quality Module[.color]
 sentient-spider=Sentient Spider
+sentient-spider-teslagun=Sentient Spider teslagun
 crystalline-fuel=Crystalline fuel
 
 [item-description]
