@@ -122,6 +122,8 @@ data.raw["splitter"]["turbo-splitter"].next_upgrade = "hexic-splitter"
 
 local sentient_spider = table.deepcopy(data.raw["spider-vehicle"]["spidertron"])
 sentient_spider.name = "sentient-spider"
+sentient_spider.guns = {"sentient-spider-teslagun"}
+sentient_spider.equipment_grid = "sentient-spider-equipment-grid"
 
 
 ---@diagnostic disable-next-line: assign-type-mismatch
