@@ -1,0 +1,10 @@
+
+local sentient_spider_equipment_grid = {
+    type = "equipment-grid",
+    name = "sentient-spider-equipment-grid",
+    equipment_categories = {"armor"},
+    width = 12,
+    height = 10,
+}
+
+data:extend({sentient_spider_equipment_grid})
