@@ -11,3 +11,4 @@ require("prototypes.shortcut")
 require("prototypes.technology")
 require("prototypes.combat_robot")
 require("prototypes.projectile")
+require("prototypes.equipment_grid")
