@@ -1,8 +1,9 @@
 ---------------------------------------------------------------------------------------------------
 Version: 0.4.2
 Date: 28/5/25
-  Major Features:
-    - Added dungeons.
+  Changes:
+    - Sentient Spider is now equipped with 1x [item=teslagun] instead of 4x [item=rocket-launcher].
+    - Sentient Spider now has a larger equipment grid.
   Bugfixes:
     - Fixed the factoriopedia simulation for hexaprisms and hexic underground belts.
     - Added localization for the crystalline fuel tech.
